# fhir

./: .bazelrc  MODULE.bazel
bazel/: antlr4_cc.bzl  dependencies.bzl  extensions.bzl
bazel/buildfiles/: libarchive_config.h
cc/google/fhir/: BUILD  fhir_package.h  proto_util.cc  proto_util.h  references_test.cc
cc/google/fhir/fhir_path/: BUILD
cc/google/fhir/testutil/: BUILD  proto_matchers.cc
testdata/r4/: BUILD
testdata/stu3/: BUILD
